# agent-evals-demo

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements.txt
agents/cruise_booking/: README.md  __init__.py  agent.py  config.py  config_helpers.py  prompt_loader.py  tracing_util.py
agents/cruise_booking/prompts/: pricing_agent.yaml
agents/cruise_booking/sub_agents/: __init__.py  itinerary_agent.py  pricing_agent.py  recommendation_agent.py  search_agent.py
agents/cruise_booking/tools/: __init__.py  data_search_tools.py  semantic_search_tools.py
docs/: cruise_booking_flow.mmd  design_ascii.txt  design_simple.mmd
evals/datasets/: evaluation_criteria.csv  evaluation_ground_truth.xlsx  golden_dataset.csv  golden_dataset_small.csv
evals/eval_code_based/: __init__.py  sql_syntax.py  tool_usage.py
evals/eval_llm_judge/: SUMMARY.md  instruction_following.yaml  query_understanding.yaml  response_coherence.yaml  response_completeness.yaml  response_relevance.yaml  semantic_search_quality.yaml
evals/eval_prompts/: SUMMARY.md  __init__.py  instruction_following.yaml  query_understanding.yaml  response_coherence.yaml  response_completeness.yaml  response_completeness_v2.yaml  response_relevance.yaml  semantic_search_quality.yaml
evals/notebooks/: cruise_booking_eval.ipynb
evals/tests/: scenarios_llm_judge.py
phoenix-arize/: docker-compose.yaml
prompts/: __init__.py  constraint_extraction.yaml  itinerary_agent.yaml  pricing_agent.yaml  recommendation_agent.yaml  response_generation.yaml  root_agent.yaml  search_agent.yaml  sql_generation.yaml
scripts/: README.md  load_data.py  start_adk.sh  start_phoenix.sh  stop_adk.sh  stop_phoenix.sh  test_agent.py  verify_phoenix.py
src/agents/: __init__.py  compat.py
src/llm/: __init__.py
src/models/: __init__.py  agent_path.py  constraints.py  responses.py
src/models/structured_llm/: __init__.py  response_schemas.py
src/tools/: __init__.py  data_loader.py  data_search.py  semantic_search.py  vector_store.py
src/utils/: __init__.py  instrumentation.py  logger.py  logging_config.py  phoenix_tracer.py
tests/: scenarios_runner.py  test_agent_queries.py  test_llm_agent.py  test_llm_simple.py  test_phoenix_tracing.py  test_prompt_loader.py  test_scenarios.py
tests/scenarios/: budget_constrained.json  destination_comparison.json  family_vacation.json  itinerary_deep_dive.json  scenarios.yaml  search_and_book.feature  search_and_book.json
