[project]
name = "agent-evals"
version = "0.1.0"
description = "Cruise Booking Agent with Intent Detection and Evaluation Framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "google-adk>=1.22.1", # Google Agent Development Kit
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    # Data processing
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "numpy>=2.4.1",
    "openpyxl>=3.1.5",
    # Vector store and embeddings
    "chromadb>=1.4.0",
    "sentence-transformers>=5.2.0",
    # LLM providers
    "openai>=2.15.0",
    "anthropic>=0.76.0",
    # Logging and monitoring
    "structlog>=25.5.0",
    "arize-phoenix>=12.29.0",
    "arize-phoenix-client==1.28.0",
    "openinference-instrumentation-openai>=0.1.41",
    "python-json-logger>=2.0.0",
    # Utilities
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "openinference-instrumentation-google-adk>=0.1.8",
    "litellm>=1.81.3",
    "openinference-instrumentation-litellm>=0.1.29",
    "duckdb>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.0.0",
]

[project.scripts]
agent-eval = "agent_evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
