[project]
name = "agent-evals"
version = "0.1.0"
description = "Cruise Booking Agent with Intent Detection and Evaluation Framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "google-adk>=1.27.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    # Data processing
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    # Vector store and embeddings
    "chromadb>=1.5.5",
    "sentence-transformers>=5.3.0",
    # LLM providers
    "openai>=2.29.0",
    "anthropic>=0.86.0",
    "litellm>=1.82.4",
    # Logging and monitoring
    "structlog>=25.5.0",
    "arize-phoenix>=13.15.0",
    "arize-phoenix-client>=2.1.0",
    "openinference-instrumentation-openai>=0.1.42",
    "openinference-instrumentation-vertexai>=0.1.12",
    "openinference-instrumentation-google-adk>=0.1.10",
    "openinference-instrumentation-litellm>=0.1.29",
    "python-json-logger>=4.0.0",
    # Utilities
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "duckdb>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=26.3.1",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "ipython>=9.11.0",
]

[project.scripts]
agent-eval = "agent_evals.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
